# chefdeck

./: .gitignore  .vercelignore  LICENSE  README.md  ThirdPartyNotices.txt  eslint.config.mjs  licenses.json  next.config.ts  package-lock.json  package.json  turbo.json  vercel.json
apps/desktop/src-tauri/: .gitattributes  Cargo.toml  ThirdPartyNotices.html  ThirdPartyNotices.md  about.hbs  about.toml  build.rs  tauri.conf.json  temp.db
apps/desktop/src-tauri/.sqlx/: query-043e10803c9692b5f9da4129966827ea1400edab1052bd7766ff054f36f9ed15.json  query-06f864ed030890ed606d233ab5bc432c530dba4050b04dfc6f10564a93169dd2.json  query-070e3f86b1c482abba4ec60e659b9860559f7138d7e325690f12102cb1526c21.json  query-07dc0a5f98d774848111d3cf2a1350dcde99b59baab163dbf6046732ee3193c8.json  query-0d0df35ce11aadbcfd6cee13cb7dfbe9aef7bd5e8a6c0fcd66cb20965b85c142.json  query-1c09df9467473eba67a8e3a2facd869c305395560de3f13d339f6050f21c10e1.json  query-1e8a33cf5945b2e6ed518df622065ebbcf5e3add5ebb20a0c2f123061dc3331f.json  query-24639b980fe7ba215e2a8f0f97360675f4f3fcde1d4f8182fb30a3e52c24d118.json  query-2c4707aa6d480eaa9a639647b95a4983371164ef964c967c116e31436bb82dba.json  query-30115fcbd1a07e3238a64968f0e65acaacfd5913f5d0c582c4eeedce2ac12a15.json  query-327932eb665e6cfa57a9fc701f4edfb0d987b785bc3c48a98ebb02afc3cbf2b3.json  query-336158bbc3790b3d936a04580f9edd74a7e5a0c324796beedcba41f7f0830588.json  query-336310999d0bd29e3fd91e4923ddd18184b43d7aaf7c89ed4834aba51723c83e.json  query-364b60f8ea16914a3e33b29e4157f76166741559b2b24c0ad0c7b584a3531628.json  query-3b653282156d96975f37cf32b614e74967e76fcd9a2e1970837af1fe3be4979e.json  query-3c2c0712ea6058bf3492efbb530165ede565f631788bcf9dec6b398580d5f0e6.json  query-3e6de9febe23ec05edc8fbbed4492350b887f3de8bef6c98c3fe217d9d8b568a.json  query-45612aef9f488131d50d0f8bc7d01bf765b8c636f34542c47736e53bbd3aae2a.json  query-46e191a215ed4aed27d03fd9f41b7247f4ec7b348edaa17f670b670d6b2fb7a4.json  query-51d8924b3ba14c37e756769c01b30eb46440fb2e77a36d80eb088c3aeedc74a5.json  query-5ce6ea4f21a941a12435dc6b9aa64f4aca393c78037a2925446d8e804a7ffe0a.json  query-61e69946d5c880cf5b7a8fcf8337d07969d8f0ccc52f1b37b0ae0d0be7127423.json  query-7aaf4bbd685acb056e5425e4510386d09247db4d27ee1963535032c0c4cfc56e.json  query-7c8e154fc128e0e9fcfe459b862b4e357f6372daec45c37185d8f584ef20cde1.json  query-87564ed350b18b7c0f9863a3244e9cd65ff9af38325313e1c5bac5938ce59948.json  (+28 more)
src/: middleware.ts
(+458 files in other folders)
