[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["cdrice26"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chefdeck_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-log = "2"
getrandom = "0.2"
window-vibrancy = "0.7.1"
tauri-plugin-os = "2"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite", "chrono"] }
tauri-plugin-dialog = "2"
image = "0.25.6"
uuid = { version = "1.19.0", features = ["v4"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
dotenv = "0.15.0"
tokio = "1.49.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
infer = "0.19.0"
